force-app/main/default/objects/Cancellation_And_Refund__mdt/Cancellation_And_Refund__mdt.object-meta.xml
<CustomObject>
    <label>Cancellation And Refund</label>
    <pluralLabel>Cancellation And Refunds</pluralLabel>
</CustomObject>