force-app/main/default/objects/Cancellation_And_Refund__mdt/fields/Charges__c.field-meta.xml
<CustomField>
    <fullName>Charges__c</fullName>
    <label>Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>