force-app/main/default/objects/Cancellation_And_Refund__mdt/fields/Greater_Than__c.field-meta.xml
<CustomField>
    <fullName>Greater_Than__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if time frame is greater than the selected time frame</description>
    <label>Greater Than</label>
    <type>Checkbox</type>
</CustomField>