force-app/main/default/objects/Cancellation_And_Refund__mdt/fields/Less_Than__c.field-meta.xml
<CustomField>
    <fullName>Less_Than__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this if the time frame is less than the selected time frame.</description>
    <label>Less Than</label>
    <type>Checkbox</type>
</CustomField>