force-app/main/default/objects/Cancellation_And_Refund__mdt/fields/Refund_Policy__c.field-meta.xml
<CustomField>
    <fullName>Refund_Policy__c</fullName>
    <label>Refund Policy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>