force-app/main/default/objects/Cancellation_And_Refund__mdt/fields/Time_Frame__c.field-meta.xml
<CustomField>
    <fullName>Time_Frame__c</fullName>
    <label>Time Frame</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12</fullName>
                <default>true</default>
                <label>12</label>
            </value>
            <value>
                <fullName>24</fullName>
            </value>
            <value>
                <fullName>12-24</fullName>
            </value>
            <value>
                <fullName>24-48</fullName>
            </value>
            <value>
                <fullName>Unlimited</fullName>
            </value>
            <value>
                <fullName>48</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>